[package]
name = "qcell"
version = "0.4.3"
authors = ["Jim Peters <jim@uazu.net>"]
edition = "2018"

description = "Statically-checked alternatives to RefCell and RwLock"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/uazu/qcell"
documentation = "https://docs.rs/qcell"

keywords = ["cell","refcell","borrow","borrowing","rc"]
categories = [ "data-structures", "memory-management", "rust-patterns" ]

[features]
default = ["std"]
std = ["alloc", "once_cell"]
alloc = []
const_generics = []

[dependencies]
once_cell = { version = "1.4.0", optional = true }

[dev-dependencies]
once_cell = "1.4.0"
static_assertions = "1.0"
crossbeam = "0.7"
trybuild = "1.0"
rustversion = "1.0"
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
