[package]
name = "qcell"
version = "0.5.3"
authors = ["Jim Peters <jim@uazu.net>"]
edition = "2018"
rust-version = "1.60.0"

description = "Statically-checked alternatives to RefCell and RwLock"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/uazu/qcell"
documentation = "https://docs.rs/qcell"

keywords = ["cell","refcell","borrow","borrowing","rc"]
categories = [ "data-structures", "memory-management", "rust-patterns" ]

[features]
default = ["std"]
std = ["alloc", "once_cell", "exclusion-set?/std"]
alloc = []

[dependencies]
once_cell = { version = "1.4.0", optional = true }
generativity = { version = "1.0.0", optional = true }
exclusion-set = { version = "0.1.2", optional = true }

[dev-dependencies]
crossbeam = "0.8"
once_cell = "1.4.0"
pin-project = "1"
pin-utils = "0.1"
rand = "0.8"
static_assertions = "1.0"


# For docs.rs, build docs with feature labels.  Search for `docsrs` in
# source to see the things that are labelled.  To test this use:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
